# document-extraction-benchmarks

./: .dockerignore  .gitignore  Dockerfile  README.md  arquitetura.md  comparar_metricas.py  dev.Dockerfile  docker-compose.yml  modelos.txt  planilha.py  pyproject.toml  resultados_extracao.xlsx
.github/instructions/: rules.instructions.md
experiments/: METRICAS.md  __main__.py  config.py  dataset_loader.py  evaluator.py  experiment_types.py  metrics.py  report.py  runner.py  test_extraction_direct.py
src/backend/: main.py
src/backend/api/: dependencies.py
src/backend/api/routers/: document_types.py  extract.py  llm_models.py
src/backend/core/: __init__.py  config.py  exceptions.py  logging.py
src/backend/domain/: interfaces.py
src/backend/domain/dto/: __init__.py  extract_request.py  extract_response.py
src/backend/domain/enumx/: __init__.py  document_type.py  llm_model.py
src/backend/domain/models/: __init__.py  afogados.py  arrais.py  aso.py  certificate.py  cnh.py  cracha.py  epi.py  escavadeira.py  ficha_registro.py  ltcat.py  marinheiro.py  nr10.py  nr10sep.py  nr11.py  nr12.py  nr33.py  nr35.py  nr5.py  operador_treinamento.py  pcmso.py  pgr.py  seguro.py
src/backend/infra/llm/: _token_cache.py  claude_vertex_client.py  gemini_client.py  model_factory.py  ollama_client.py  parsed_dates.py  routing_client.py  vertex_client.py  vertex_gemma_client.py  vllm_client.py
src/backend/services/: factory.py  orchestrator.py  text_normalizer.py
src/frontend/: index.html
src/frontend/src/: App.tsx  api.ts  index.css  types.ts
(+22 files in other folders)
